src/objects/salsa_import_settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings for each report to imported</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account_Name__c</fullName>
        <label>Default Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Contact_Source__c</fullName>
        <label>Default Contact Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Opportunity_RT__c</fullName>
        <label>Default Opportunity RT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Opportunity_Stage__c</fullName>
        <label>Default Opportunity Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Owner_Id__c</fullName>
        <label>Default Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <inlineHelpText>URl of report being imported</inlineHelpText>
        <label>Report URL</label>
        <type>Url</type>
    </fields>
    <label>Salsa Import Settings</label>
</CustomObject>